# cvlabs

./: .clang-format  .gitignore  ArucoHeaders.hpp  CMakeLists.txt  Core.hpp  CoreHeaders.hpp  Defines.hpp  FindOpenCV.cmake  Main.cpp  main.cpp  requirements.txt
Lab1/: CMakeLists.txt  Lab1.hpp  Main.cpp  ThreeBodyProblem.hpp
Lab1/Mars/: CMakeLists.txt  body.hpp  main.cpp
Lab2/: CMakeLists.txt  ExecTimeCounter.hpp  Filters.hpp  Main.cpp
Lab3/: Base.hpp  CMakeLists.txt  Main.cpp  Task1.hpp  Task2.hpp  Task3.hpp  Task4.hpp  cut_video.sh
Lab4/: CMakeLists.txt  CarNumbers.hpp  Convolution.hpp  FFTTests.cpp  FTImpl.hpp  FreqFilter.hpp  Main.cpp  Utils.hpp
Lab5/: Aruco.hpp  CMakeLists.txt  Main.cpp  MakePhoto.cpp
Lab5/matlab/: calibration.m  calibration.mat  calibrationSession.mat
Lab6/: CMakeLists.txt  Photo.cpp  PhotoLocator.hpp  Video.cpp  VideoLocator.hpp
Lab7/: CMakeLists.txt  Currency.cpp  PathFinder.cpp  Thinning.cpp  ThinningAlgo.hpp
Lab7surf/: requirements.txt  test.ipynb
Lab8/: CMakeLists.txt  cam.yml
Lab8/include/: utils.hpp
Lab8/samples/: CMakeLists.txt  create_board.cpp  detect_board.cpp
Lab8/src/: CMakeLists.txt  calibrate.cpp  create.cpp  detect.cpp
Lab8/test/: CMakeLists.txt  aruco_calib.cpp  aruco_detect.cpp  aruco_gen.cpp
Media/Lab5/: calibration_params.xml  calibration_params.yml
cmake/: findAruco.cmake  findOpenCV.cmake
lab1/: CMakeLists.txt  lab1.hpp
resources/: 1.tif
